# VVIP

./: .gitignore  BlueBook_VVIP_Transport_Report.md  README.md  TECHNICAL_DOCS.md  VVIP.md  frontend-backend-sync.spec.md  ui_reference.md
.github/: copilot-instructions.md
frontend/: .dockerignore  debug_console.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AIReasoningPanel.jsx  AnalyticsDeepDive.jsx  ConvoyMap.jsx  CustomIcons.jsx  LeftPanel.jsx  NotificationBell.jsx  RecommendationDeepDive.jsx  RightPanel.jsx  SHdr.jsx  SearchBar.jsx  SecurityDossierPanel.jsx  VVIPDashboard.jsx
frontend/src/context/: ConvoyContext.jsx
frontend/src/hooks/: useLiveData.js
frontend/src/services/: api.js
frontend/src/views/: InterDeptComms.jsx  RoutePlanning.jsx
infra/: compose.prod.yml  compose.yml
infra/docker/: Dockerfile.command-deck  Dockerfile.convoy-brain  Dockerfile.frontend  Dockerfile.postgis  Dockerfile.signal-ingress  Dockerfile.traffic-oracle
infra/docs/: OS_TUNEUP_CHECKLIST.md
infra/observability/: alerts.yml  prometheus.yml
infra/observability/grafana/dashboards/: vvip-overview.json
infra/observability/grafana/provisioning/dashboards/: default.yml
infra/scripts/: bootstrap.sh  deploy.sh  launch-frontend.sh  os_checklist.sh  os_tuning.sh  refresh_seed.ps1  vram_audit.sh
models/: Modelfile.qwen_vvip
models/configs/: anomaly_detector.yaml  flow_forecaster.yaml  qwen_ollama.json
models/finetune/: config.yaml  export_gguf.py  generate_dataset.py  pyproject.toml  train_qwen_vvip.py
services/command-deck/: package.json  svelte.config.js  vite.config.ts
services/command-deck/src/: app.d.ts  app.html
services/command-deck/src/lib/api/: client.ts  data-service.ts
services/command-deck/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  ChatPanel.svelte  ConnectionBanner.svelte  ConvoyTracker.svelte  CorridorMap.svelte  DiversionTimeline.svelte  LoadingSkeleton.svelte  RouteComparator.svelte  SegmentInspector.svelte  SimulationViewer.svelte  ThoughtChain.svelte  ToolCallCard.svelte  TrafficHeatmap.svelte
services/command-deck/src/lib/stores/: chat.ts  (+5 more)
services/command-deck/src/routes/: +layout.svelte  +page.svelte
services/command-deck/tests/: integration-agent.mjs
services/convoy-brain/: pyproject.toml
services/convoy-brain/src/convoy_brain/: __init__.py  __main__.py  metrics.py  ollama_bridge.py  orchestrator.py
services/convoy-brain/src/convoy_brain/agents/: __init__.py  diversion_coordinator.py  route_planner.py  security_liaison.py  traffic_analyst.py
services/convoy-brain/src/convoy_brain/mcp/: __init__.py  prompts.py  server.py
services/convoy-brain/src/convoy_brain/memory/: __init__.py  convoy_context.py
services/convoy-brain/src/convoy_brain/tools/: __init__.py  route_compute.py  spatial_query.py  traffic_fetch.py
services/convoy-brain/src/convoy_brain/workflows/: __init__.py  live_escort.py  post_clearance.py  pre_movement.py
services/corridor-store/: docker-compose.yml
services/corridor-store/config/: postgresql.conf
services/corridor-store/importer/: pyproject.toml
services/corridor-store/importer/src/corridor_importer/: __init__.py  cli.py  loader.py  osm_extractor.py  schema_mapper.py  topology_builder.py
services/corridor-store/importer/tests/: conftest.py  test_osm_import.py
services/corridor-store/migrations/: 001_spatial_init.sql  002_graph_extensions.sql  003_anomaly_tracking.sql
services/corridor-store/seed/: sample_corridor.sql
services/signal-ingress/: Cargo.toml
services/signal-ingress/src/: lib.rs  main.rs
services/signal-ingress/src/anomaly/: config.rs  detector.rs  flags.rs  mod.rs  stats.rs
services/signal-ingress/src/feeds/: crowdsource.rs  fleet_gps.rs  mapping_api.rs  mod.rs  traffic_gov.rs
services/signal-ingress/src/normalize/: mod.rs  schema_align.rs
services/signal-ingress/src/pipeline/: batch.rs  channels.rs  mod.rs
services/signal-ingress/src/publish/: arrow_ipc.rs  mod.rs
services/signal-ingress/tests/: anomaly_tests.rs  pipeline_tests.rs
services/traffic-oracle/: pyproject.toml
services/traffic-oracle/src/traffic_oracle/: __init__.py  __main__.py  metrics.py
services/traffic-oracle/src/traffic_oracle/anomaly/: __init__.py  feature_builder.py  ml_detector.py  stream_detector.py
services/traffic-oracle/src/traffic_oracle/data/: __init__.py  cache.py  config.py  db.py  graph_queries.py  models.py  vector_store.py
services/traffic-oracle/src/traffic_oracle/evaluate/: __init__.py  scenario_sim.py
services/traffic-oracle/src/traffic_oracle/ingest/: __init__.py  arrow_decoder.py  cache_writer.py  db_writer.py  nats_consumer.py
services/traffic-oracle/src/traffic_oracle/optimize/: __init__.py  constructive_heuristic.py  corridor_router.py  diversion_planner.py  mip_solver.py
services/traffic-oracle/src/traffic_oracle/optimize/rl/: __init__.py  agent.py  environment.py  reward.py  trainer.py
services/traffic-oracle/src/traffic_oracle/predict/: __init__.py  congestion_heatmap.py  data_loader.py  eta_model.py  flow_forecaster.py  training_pipeline.py
services/traffic-oracle/src/traffic_oracle/predict/nn/: __init__.py  congestion_gate.py  dstgat.py  graph_attention.py  quantize.py  temporal_conv.py
services/traffic-oracle/src/traffic_oracle/runtime/: __init__.py  gpu_arbiter.py  memory_profiler.py  onnx_serve.py  thread_pool.py
services/traffic-oracle/src/traffic_oracle/synthetic/: __init__.py  confidence_scorer.py  gap_detector.py  generator.py  pattern_matcher.py  spatial_interpolator.py
services/traffic-oracle/tests/: conftest.py  test_anomaly_detection.py  test_graph_queries.py  test_ingest_pipeline.py  test_models.py  test_synthetic_data.py  test_vector_store.py
services/traffic-oracle/tests/fixtures/: synthetic_traffic.py
shared/proto/: convoy_event.proto  corridor.proto  traffic_signal.proto
shared/schemas/arrow/: traffic_snapshot.fbs
tests/adversarial/: __init__.py  __main__.py  config.py  evaluator.py  report.py  runner.py  stability.py
(+12 files in other folders)
