[project]
name = "convoy-brain"
version = "0.1.0"
description = "Agentic orchestration layer for VVIP convoy planning — powered by Qwen 3.5 9B via Ollama"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # LLM agent framework — stateful multi-agent workflows
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",

    # Ollama Python client for local LLM inference
    "ollama>=0.4",

    # Database access (shared with traffic-oracle)
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "geoalchemy2>=0.16",

    # Real-time state
    "valkey>=6.0",
    "nats-py>=2.9",

    # Geospatial utilities
    "shapely>=2.0",
    "geojson>=3.1",

    # Data handling
    "polars>=1.15",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",

    # Structured logging
    "structlog>=24.4",

    # HTTP client for inter-service calls
    "httpx>=0.28",

    # Web server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",

    # Observability
    "prometheus-client>=0.21",
    "psutil>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convoy_brain"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
