[package]
name = "signal-ingress"
version = "0.1.0"
edition = "2024"
description = "Real-time traffic signal ingestion and normalization for VVIP corridor planning"
license = "MIT"

[dependencies]
# Async runtime — hardware-aware thread scheduling via multi-threaded work-stealing
tokio = { version = "1", features = ["full"] }

# HTTP client for external API feeds (mapping, government traffic portals)
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }

# Zero-copy serialization / deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Apache Arrow for zero-copy columnar IPC between services
arrow = { version = "54", features = ["ipc"] }

# Geospatial primitives (WGS84 coordinates, geometries)
geo = "0.29"
geojson = "0.24"

# NATS client for lightweight edge-friendly message bus
async-nats = "0.38"

# Structured logging with zero-allocation fast path
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Timestamp handling for traffic signal epochs
chrono = { version = "0.4", features = ["serde"] }

# Configuration management
config = "0.14"

# YAML config loading (anomaly thresholds)
serde_yaml = "0.9"

# Buffer management for Arrow IPC
bytes = "1"

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
# Aggressive optimization for edge deployment — minimize binary size + maximize throughput
