[project]
name = "corridor-importer"
version = "0.1.0"
description = "GIS network importer — loads OSM road networks into PostGIS for corridor routing"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "osmnx>=2.0",
    "geopandas>=1.0",
    "asyncpg>=0.31",
    "click>=8.0",
    "shapely>=2.0",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corridor_importer"]

[project.scripts]
corridor-import = "corridor_importer.cli:main"
